Refact get endPoints